--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,8 @@
     <!-- region ========== Order formatters. -->
     <!-- two strings concatenated without any space in between; support for RTL languages -->
     <string name="a_b">%1$s%2$s</string>
+    <!-- two strings concatenated with a single space in between; support for RTL languages -->
+    <string name="a_space_b">%1$s %2$s</string>
     <!-- generic "label (info)"; support for RTL languages -->
     <string name="a_bracket_b_bracket">%1$s (%2$s)</string>
     <!-- generic "label: value"; support for RTL languages -->
@@ -355,7 +357,7 @@
     <string name="info_tap_on_image_to_select">Tap on the larger image to select it.</string>
     <string name="info_download_successful">Download successful</string>
     <!-- See GitHub docs... there is optional code to be added to Calibre. -->
-    <string name="info_calibre_content_server_extension">Calibre content server extension is not installed.</string>
+    <string name="info_calibre_content_server_extension">Calibre Content Server extension is not installed. Virtual libraries will not be available.</string>
     <!-- ContentDescription text for the drag handle button in re-order-able lists -->
     <string name="cd_btn_drag_handle">Drag to reorder this list</string>
     <!-- [VERIFIED] ContentDescription text for the delete (cross) icon at the end of an input box. -->
