--- a/app/src/main/res/values-fo/strings.xml
+++ b/app/src/main/res/values-fo/strings.xml
@@ -118,4 +118,5 @@
     <string name="httpErrorFile">Fekk ikk atgongd til fíluna.</string>
     <string name="httpErrorFileNotFound">Ynskti fílan varð ikki funnin.</string>
     <string name="error_unexpected">Ein óvæntaður villa uppstóð.</string>
+    <string name="a_space_b">%1$s %2$s</string>
 </resources>
