--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…“ - Regex to find wrong ones: ('|”|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -286,7 +289,7 @@
     <string name="lbl_bookshelf">Knihovna</string>
     <string name="lbl_bookshelves">Zvolte knihovnu</string>
     <string name="lbl_calibre_content_server">Server obsahu Calibre</string>
-    <string name="info_calibre_content_server_extension">Rozšíření serveru s obsahem kalibru není nainstalováno.</string>
+    <string name="info_calibre_content_server_extension">Rozšíření serveru s obsahem kalibru není nainstalováno. Virtuální knihovny nebudou k dispozici.</string>
     <string name="lbl_certificate_ca">Certifikát CA</string>
     <string name="lbl_certificates">Certifikáty</string>
     <string name="lbl_clone_style">Klonovat styl</string>
@@ -763,4 +766,5 @@
     <string name="error_invalid_url">Neplatná adresa (URL)</string>
     <string name="lbl_certificate_validity_period">Platnost: %1$s - %2$s</string>
     <string name="lbl_reading">Rozečtené</string>
+    <string name="a_space_b">%1$s %2$s</string>
 </resources>
