--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…“  - Regex to find wrong ones: ('|”|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -271,7 +274,7 @@
     <string name="lbl_bookshelf">Bücherregal</string>
     <string name="lbl_bookshelves">Bücherregale</string>
     <string name="lbl_calibre_content_server">Calibre inhaltsserver</string>
-    <string name="info_calibre_content_server_extension">Die Calibre-Inhaltsservererweiterung ist nicht installiert.</string>
+    <string name="info_calibre_content_server_extension">Die Calibre-Inhaltsservererweiterung ist nicht installiert. Virtuelle Bibliotheken werden nicht verfügbar sein.</string>
     <string name="lbl_certificate_ca">CA-Zertifikat</string>
     <string name="lbl_certificates">Zertifikate</string>
     <string name="lbl_clone_style">Stil klonen</string>
@@ -745,4 +748,5 @@
     <string name="error_invalid_url">Ungültige Adresse (URL)</string>
     <string name="lbl_certificate_validity_period">Gültigkeit: %1$s - %2$s</string>
     <string name="lbl_reading">Am Lesen</string>
+    <string name="a_space_b">%1$s %2$s</string>
 </resources>
