--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -272,7 +275,7 @@
     <string name="lbl_bookshelf">Βιβλιοθήκης</string>
     <string name="lbl_bookshelves">Ράφια Βιβλιοθήκης</string>
     <string name="lbl_calibre_content_server">Διακομιστής περιεχομένου Calibre</string>
-    <string name="info_calibre_content_server_extension">Η επέκταση διακομιστή περιεχομένου Caliber δεν έχει εγκατασταθεί.</string>
+    <string name="info_calibre_content_server_extension">Η επέκταση διακομιστή περιεχομένου Caliber δεν έχει εγκατασταθεί. Οι εικονικές βιβλιοθήκες δεν θα είναι διαθέσιμες.</string>
     <string name="lbl_certificate_ca">Πιστοποιητικό CA</string>
     <string name="lbl_certificates">πιστοποιητικών</string>
     <string name="lbl_clone_style">Αντιγραφή στυλ</string>
@@ -746,4 +749,5 @@
     <string name="error_invalid_url">Μη έγκυρη διεύθυνση (URL)</string>
     <string name="lbl_certificate_validity_period">Ισχύς: %1$s - %2$s</string>
     <string name="lbl_reading">Ανάγνωση</string>
+    <string name="a_space_b">%1$s %2$s</string>
 </resources>
