--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -285,7 +288,7 @@
     <string name="lbl_bookshelf">Biblioteca</string>
     <string name="lbl_bookshelves">Bibliotecas</string>
     <string name="lbl_calibre_content_server">Servidor de contenido de Calibre</string>
-    <string name="info_calibre_content_server_extension">La extensión del servidor de contenido de Calibre no está instalada.</string>
+    <string name="info_calibre_content_server_extension">La extensión del servidor de contenido de Calibre no está instalada. Las bibliotecas virtuales no estarán disponibles.</string>
     <string name="lbl_certificate_ca">Certificado de CA</string>
     <string name="lbl_certificates">Certificados</string>
     <string name="lbl_clone_style">Duplicar estilo</string>
@@ -759,4 +762,5 @@
     <string name="error_invalid_url">Dirección no válida (URL)</string>
     <string name="lbl_certificate_validity_period">Validez: %1$s - %2$s</string>
     <string name="lbl_reading">Leyendo</string>
+    <string name="a_space_b">%1$s %2$s</string>
 </resources>
