--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…”  - Regex to find wrong ones: ('|“|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -290,7 +293,7 @@
     <string name="lbl_bookshelf">Półka</string>
     <string name="lbl_bookshelves">Wybierz półki</string>
     <string name="lbl_calibre_content_server">Serwer zawartości Calibre</string>
-    <string name="info_calibre_content_server_extension">Rozszerzenie serwera treści Calibre nie jest zainstalowane.</string>
+    <string name="info_calibre_content_server_extension">Rozszerzenie serwera treści Calibre nie jest zainstalowane. Wirtualne biblioteki nie będą dostępne.</string>
     <string name="lbl_certificate_ca">Certyfikat urzędu certyfikacji</string>
     <string name="lbl_certificates">Certyfikaty</string>
     <string name="lbl_clone_style">Duplikat stylu</string>
@@ -767,4 +770,5 @@
     <string name="error_invalid_url">Nieprawidłowy adres (URL)</string>
     <string name="lbl_certificate_validity_period">Ważność: %1$s - %2$s</string>
     <string name="lbl_reading">Czytane</string>
+    <string name="a_space_b">%1$s %2$s</string>
 </resources>
