--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -287,7 +290,7 @@
     <string name="lbl_bookshelf">Книжная полка</string>
     <string name="lbl_bookshelves">Книжные полки</string>
     <string name="lbl_calibre_content_server">Сервер содержимого Calibre</string>
-    <string name="info_calibre_content_server_extension">Расширение сервера содержимого Caliber не установлено.</string>
+    <string name="info_calibre_content_server_extension">Расширение сервера содержимого Caliber не установлено. Виртуальные библиотеки будут недоступны.</string>
     <string name="lbl_certificate_ca">Сертификат центра сертификации</string>
     <string name="lbl_certificates">Cертификаты</string>
     <string name="lbl_clone_style">Клонировать стиль</string>
@@ -764,4 +767,5 @@
     <string name="error_invalid_url">Неверный адрес (URL)</string>
     <string name="lbl_certificate_validity_period">Срок действия: %1$s - %2$s</string>
     <string name="lbl_reading">Читаю</string>
+    <string name="a_space_b">%1$s %2$s</string>
 </resources>
